@@ -1,5 +1,10 @@
 2008-11-08  Sam Steingold  <sds@gnu.org>
 
+	* modules/clx/new-clx/clx.f (EVENTS-QUEUED): add (call XEventsQueued)
+	* modules/clx/new-clx/clx.lisp (EVENTS-QUEUED): export
+
+2008-11-08  Sam Steingold  <sds@gnu.org>
+
 	* modules/rawsock/rawsock.c (SOCKADDR-FAMILY):
 	return family as a keyword
 
